formatting. fixed visibility:hidden

--- a/Module 1 Project - Minesweeper/styles/style.css
+++ b/Module 1 Project - Minesweeper/styles/style.css
@@ -88,7 +88,7 @@ p#minesweeper{
     justify-content: center;
 }
 #main-container{
-    border:2px solid red;
+    /* border:2px solid red; */
     box-shadow:1px 2px 8px 2px black;
     background-color: rgb(196, 191, 191);
     width:40%;
@@ -119,7 +119,7 @@ p#minesweeper{
 
 
 #main-grid{
-    border:2px solid green;
+    /* border:2px solid green; */
     width:100%;
     height:100%;
     padding:2%;
@@ -130,17 +130,57 @@ p#minesweeper{
 
 .square{
     border:1px solid black; 
-    font-size:3%;
     width:100%;
     height:100%;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
 }
 
-.images {
+.bombs {
     /* border:1px solid red; */
-    width:100%;
-    height:100%;
+    width:85%;
+    height:80%;
+    position: relative;
 }
 
+.numbers{
+    /* border:1px solid blue; */
+    display:block;
+    width: 100%;
+    height: 100%;
+    padding-top: 20%;
+    text-align: center;
+    font-size:1.5vw;
+    font-family:monospace;
+    font-weight: bold;
+}
+
+#num1{
+    color: blue;
+}
+#num2{
+    color: green;
+}
+#num3{
+    color: red;
+}
+#num4{
+    color: rgb(1, 1, 104);
+}
+#num5{
+    color: rgb(97, 1, 1);
+}
+#num6{
+    color: rgb(51, 122, 155);
+}
+#num7{
+    color: rgb(123, 6, 158);
+}
+#num8{
+    color: rgb(55, 55, 56);
+}
 /* IMAGES */
 /* flag - https://icon-library.com/images/red-flag-icon/red-flag-icon-18.jpg */
 /* bomb - https://esraa-alaarag.github.io/Minesweeper/images/bomb.png */
